# llama-task-agent

./: .gitignore  API_EXAMPLES.md  CONTRIBUTING.md  QUICKSTART.md  README.md  kaggle-demo.ipynb  pyproject.toml  requirements.txt  test_agent.py  train-standalone.ipynb
agent/: __init__.py  executor.py  schemas.py  tools.py
configs/: agent_config.json
data/: dataset.json  eval.json  generate_dataset.py  train.json
models/lora-adapter/: README.md  adapter_config.json
screenshots/: README.md
serving/: __init__.py  app.py  inference.py
training/: evaluate.py  finetune_lora.py
