[project]
name = "personaltaskai"
version = "0.1.0"
description = "Fine-tuned LLaMA agent for task-oriented tool execution"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "peft",
    "bitsandbytes",
    "accelerate",
    "datasets",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "numpy",
    "tqdm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "data", "training", "serving"]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ruff",
]
